# qgcgtoy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/models/CornellBox/: CornellBox-Empty-RGB.mtl
assets/shaders/: phong_fs.glsl  shadow_fs.glsl
assets/shaders/GLSL/: bvh_frag.glsl  bvh_vert.glsl  debug_frag.glsl  debug_vert.glsl  disney_frag.glsl  donothing_vert.glsl  gbuffer_frag.glsl  gbuffer_vert.glsl  goochshading_frag.glsl  hatching_frag.glsl  hiz_frag.glsl  hiz_vert.glsl  light_frag.glsl  light_vert.glsl  phong_shadow_frag.glsl  phong_shadow_vert.glsl  pt_mis_frag.glsl  rsm_frag.glsl  rsm_vert.glsl  scene_flux_frag.glsl  scene_flux_vert.glsl  sobel_outline_frag.glsl  ssr_frag.glsl  ssr_vert.glsl  toonshading_frag.glsl
framework/: CMakeLists.txt
framework/common/: CMakeLists.txt  camera.hpp  light.hpp  main.cpp  mesh.hpp  model.hpp  render_pass.hpp  shader.hpp
framework/geometry/: geo_render.hpp  sphere.hpp
framework/imgui/: CMakeLists.txt
framework/interface/: application.h  pass.h
framework/manager/: model_manager.hpp
framework/object/: object.h
framework/platform/: CMakeLists.txt  glfw_app.cpp  glfw_app.hpp
framework/utils/: colors.hpp  progress_bar.hpp  umath.hpp
framework/utils/load/: load_texture.hpp
framework/webgl/: engine.js
framework/webgl/lights/: Light.js
framework/webgl/loads/: loadOBJ.js  loadShader.js
framework/webgl/materials/: Material.js  PhongMaterial.js
framework/webgl/objects/: Mesh.js
framework/webgl/renderers/: MeshRender.js  WebGLRenderer.js
platform/: win.hpp
rendering/environment_mapping/IBL/: CMakeLists.txt  ibl-diffuse.cpp  ibl-specular.cpp  ibl.cpp
rendering/environment_mapping/PRT/: engine.js  index.html
rendering/environment_mapping/PRT/webgl/lights/: DirectionalLight.js  Light.js  PointLight.js
rendering/environment_mapping/PRT/webgl/loads/: loadOBJ.js  loadShader.js
rendering/environment_mapping/PRT/webgl/materials/: Material.js  PRTMaterial.js  PhongMaterial.js  ShadowMaterial.js  SkyBoxMaterial.js
rendering/environment_mapping/PRT/webgl/renderers/: MeshRender.js  WebGLRenderer.js
rendering/environment_mapping/PRT/webgl/shaders/: Shader.js
rendering/environment_mapping/PRT/webgl/textures/: FBO.js
rendering/global_illumination/RSM/: CMakeLists.txt  rsm.cpp
rendering/global_illumination/SSAO/: CMakeLists.txt  ssao.cpp
rendering/global_illumination/SSR/: CMakeLists.txt  index.html  ssr.cpp  ssrt.cpp
rendering/global_illumination/SSR/src/: engine.js
rendering/misc/forward_plus/: CMakeLists.txt  forward_plus.cpp
rendering/non-photorealistic-rendering/: CMakeLists.txt  style_shading.cpp  toon_shading.cpp
rendering/physically_based_rendering/Cook-Torrance_BRDF/: CMakeLists.txt  cook-torrance_brdf.cpp
rendering/physically_based_rendering/LTC/: CMakeLists.txt  ltc-area_light.cpp  ltc_matrix.hpp
rendering/ray_tracing/path_tracing/: CMakeLists.txt  bvh.cpp  disney_principle.cpp  path_tracing.cpp  path_tracing_gpu.cpp  path_tracing_mis.cpp
rendering/shadow/: README.md
rendering/shadow/PCSS/: engine.js  index.html
rendering/shadow/PCSS/webgl/lights/: DirectionalLight.js  Light.js  PointLight.js
rendering/shadow/PCSS/webgl/loads/: loadOBJ.js
rendering/shadow/PCSS/webgl/materials/: ShadowMaterial.js
rendering/shadow/PCSS/webgl/renderers/: MeshRender.js  WebGLRenderer.js
rendering/shadow/PCSS/webgl/shaders/: light_fs.glsl  light_vs.glsl  shadow_vs.glsl
rendering/shadow/PCSS/webgl/textures/: FBO.js
rendering/shadow/shadow_mapping/: pcss.cpp
script/: build.bat  build_glad.bat  build_glfw.bat
test/: CMakeLists.txt  deferred_shading.cpp  hdr_cache.py  load_pmx.cpp  model_load.cpp  webgl_test.html
