cmake_minimum_required (VERSION 3.17) 
project (qgcgtoy)

set (CMAKE_C_STANDARD 99)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(${PROJECT_SOURCE_DIR}/external/include/)
include_directories(${PROJECT_SOURCE_DIR}/framework/)
include_directories(${PROJECT_SOURCE_DIR}/framework/common)
include_directories(${PROJECT_SOURCE_DIR}/framework/interface)
include_directories(${PROJECT_SOURCE_DIR}/framework/manager)
include_directories(${PROJECT_SOURCE_DIR}/framework/math)
include_directories(${PROJECT_SOURCE_DIR}/framework/object)
include_directories(${PROJECT_SOURCE_DIR}/framework/utils)
include_directories(${PROJECT_SOURCE_DIR}/framework/geometry)

find_library(assimp-vc143-mt_LIBRARY NAMES assimp-vc143-mt PATHS ${PROJECT_SOURCE_DIR}/external/lib/ NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
find_library(glfw3_LIBRARY NAMES glfw3 PATHS ${PROJECT_SOURCE_DIR}/external/lib/ NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
find_library(glm_LIBRARY NAMES glm PATHS ${PROJECT_SOURCE_DIR}/external/lib/ NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)

link_directories(${PROJECT_SOURCE_DIR}/external/bin/)
file(COPY ${PROJECT_SOURCE_DIR}/assets DESTINATION ${PROJECT_SOURCE_DIR}/build/Release)
file(COPY ${PROJECT_SOURCE_DIR}/external/bin/ DESTINATION ${PROJECT_SOURCE_DIR}/build/Release/)

add_subdirectory(framework)
add_subdirectory(rendering/global_illumination/SSAO)
add_subdirectory(rendering/environment_mapping/IBL)
add_subdirectory(rendering/non-photorealistic-rendering)
add_subdirectory(rendering/physically_based_rendering/Cook-Torrance_BRDF)
add_subdirectory(rendering/physically_based_rendering/LTC)

MESSAGE( STATUS "assimp-vc143-mt_LIBRARY: " ${assimp-vc143-mt_LIBRARY} )
MESSAGE( STATUS "glfw3_LIBRARY: " ${glfw3_LIBRARY} )
MESSAGE( STATUS "glm_LIBRARY: " ${glm_LIBRARY} )
